[package]
name = "kyd-api-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["http2"] }
color-eyre = "0.6.2"
http = "0.2.9"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
